# saviant-rag-assistant

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/rag_service_api/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/rag_service_api/rag_service/logic/: indexing_pipeline.py  rag_chain.py  retriever.py
backend/rag_service_api/rag_service/logic/config/: app_config.yaml  indexing_config.yaml
backend/rag_service_api/rag_service/prompts/rag/json_prompts/: rag_template_v2.json
config/: app_config.yaml
data/vector_db/: chroma.sqlite3
frontend/app/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  streamlit_app.py
frontend/streamlit/: streamlit_app.py
frontend/streamlit/data/vector_db/: chroma.sqlite3
logic/: indexing_pipeline_latest.py  rag_pipeline.py  retriever.py
logic/config/: retrieval_config.yaml
prompts/rag/json_prompts/: rag_template_v1.json
prompts/rag_evaluation/: metrices_prompts.py
tests/: conftest.py
tests/evaluation/: 007_helper.ipynb  extra.py  golden_queries.csv  rag_eval_config.yaml  rag_test_dataset.csv  run_rag_eval.py
tests/integration/: test_rag_pipeline.py  test_streamlit_app.py
tests/unit/: test_indexing.py  test_rag_utils.py  test_retriever.py
